--- a/sass/Layout/_footer.scss
+++ b/sass/Layout/_footer.scss
@@ -6,6 +6,19 @@ footer {
         filter: invert(100%);
     }
 
+    .fa-utensils {
+        font-size: 14px;
+    }
+
+    .fa-handshake-angle {
+        font-size: 11px;
+    }
+
+    .footer__icon {
+        float: left;
+        width: 25px;
+    }
+
     div {
         margin: 10px 0 0 0;
     }
