--- a/css/style.css
+++ b/css/style.css
@@ -153,11 +153,11 @@ header {
   border-radius: 30px;
   border: none;
   background-image: linear-gradient(to bottom right, #FF79DA, #9356DC);
-  box-shadow: 0 4px 8px 4px rgba(129, 128, 128, 0.2);
+  box-shadow: 0 4px 8px 1px rgba(129, 128, 128, 0.4);
 }
 #reserve .button:hover {
   opacity: 0.8;
-  box-shadow: 0 4px 8px 4px rgba(77, 77, 77, 0.2);
+  box-shadow: 0 4px 8px 1px rgba(77, 77, 77, 0.4);
 }
 
 #fonctioning {
@@ -181,9 +181,10 @@ header {
   width: fit-content;
   height: 70px;
   background-color: rgb(246, 246, 246);
+  box-shadow: 0 4px 8px 4px rgba(129, 128, 128, 0.2);
 }
 #fonctioning .round-corner {
-  margin: -16px -16px;
+  margin: -14px -14px;
   padding: 5px 9px 4px 9px;
   border-radius: 50%;
   color: white;
@@ -196,8 +197,8 @@ header {
   padding: 0 30px 0 40px;
 }
 #fonctioning .button {
-  font-weight: 500;
-  font-size: 18px;
+  font-weight: 600;
+  font-size: 15px;
 }
 #fonctioning a {
   color: black;
@@ -443,6 +444,9 @@ hr {
 .menu--courses .flex-item {
   flex: 0%;
 }
+.menu--courses .flex-container {
+  column-gap: 2%;
+}
 
 .button__submit {
   text-align: center;
@@ -463,14 +467,14 @@ hr {
 }
 .button--order:hover {
   opacity: 0.8;
-  box-shadow: 0 4px 8px 4px rgba(77, 77, 77, 0.2);
+  box-shadow: 0 4px 8px 1px rgba(77, 77, 77, 0.4);
 }
 
 .dish-box {
   height: 75px;
   border-radius: 15px;
   background-color: white;
-  box-shadow: 0 0 8px 0 rgba(129, 128, 128, 0.2);
+  box-shadow: 0 5px 15px 5px rgba(129, 128, 128, 0.2);
   margin-top: 20px;
   overflow: hidden;
   opacity: 0;
@@ -496,7 +500,7 @@ hr {
   min-width: 0;
 }
 .dish-box .flex-item-left h3 {
-  margin: 15px 5px 7px 10px;
+  margin: 15px 5px 7px 12px;
   font-weight: 500;
   font-size: 18px;
   overflow: hidden;
@@ -504,7 +508,7 @@ hr {
   white-space: nowrap;
 }
 .dish-box .flex-item-left p {
-  margin: 0 5px 0 10px;
+  margin: 0 5px 0 12px;
   font-size: 15px;
   overflow: hidden;
   text-overflow: ellipsis;
