--- a/sass/Sections/_menu-main.scss
+++ b/sass/Sections/_menu-main.scss
@@ -59,6 +59,10 @@
       .flex-item {
         flex: 0%;
       }  
+
+      .flex-container {
+        column-gap: 2%;
+      }
   }
 
   .button__submit {
@@ -83,7 +87,7 @@
       height: 75px;
       border-radius: 15px;
       background-color: white;
-      box-shadow: 0 0 8px 0 rgba(129, 128, 128, 0.2);
+      box-shadow: 0 5px 15px 5px rgba(129, 128, 128, 0.2);
       margin-top: 20px;
       overflow: hidden;
       opacity: 0;
@@ -111,7 +115,7 @@
         min-width: 0;
 
         h3 {
-          margin: 15px 5px 7px 10px;
+          margin: 15px 5px 7px 12px;
           font-weight: 500;
           font-size: 18px;
           overflow: hidden;
@@ -120,7 +124,7 @@
         }
   
         p {
-          margin: 0 5px 0 10px;
+          margin: 0 5px 0 12px;
           font-size: 15px;
           overflow: hidden;
           text-overflow: ellipsis;
