--- a/sass/Utils/_mixins.scss
+++ b/sass/Utils/_mixins.scss
@@ -8,7 +8,7 @@ height: 50px;
 padding: 15px 20px;
 border-radius: 30px;
 border: none;
-background-image: linear-gradient(to bottom right, $color-secondary, $color-primary);
+background-image: linear-gradient(to right bottom, $color-secondary, $color-primary 120%);
 }
 
 @mixin button-hover {
