--- a/sass/Sections/_menu-main.scss
+++ b/sass/Sections/_menu-main.scss
@@ -13,10 +13,10 @@
     background-color: $color-quaternary;
     width: 100%;
     z-index: 0;
+  }
 
-    .flex-row {
-      align-items: flex-end;
-    }
+  .align-items-end {
+    align-items: flex-end;
   }
 
   .article__h1 {
@@ -91,28 +91,34 @@
       margin-top: 20px;
       overflow: hidden;
       opacity: 0;
+  }
 
-      .check-button {
-        display: none;
+  .dish-desc {
+     .check-button {
+        position: absolute;
         border: none;
         border-radius: 0 15px 15px 0;
         height: 78px;
-        width: 100px;
+        width: 78px;
+        right: -78px;
+        bottom: 0px;
         text-align: center;
         background-color: $color-tertiary;
+        transition: right 0.5s;
 
         .fa-check {
           color: $color-tertiary;
           border-radius: 50%;
           padding: 4px 5px;
-          margin-top: 25px;
+          margin-top: 28px;
           background-color: white;
         }
       }
 
       .flex-item-left {
-        flex: 85%;
+        flex: 80%;
         min-width: 0;
+        transition: 500ms;
 
         h3 {
           margin: 15px 5px 7px 12px;
@@ -120,7 +126,7 @@
           font-size: 18px;
           overflow: hidden;
           text-overflow: ellipsis;
-          white-space: nowrap;  
+          white-space: nowrap;
         }
   
         p {
@@ -130,10 +136,12 @@
           text-overflow: ellipsis;
           white-space: nowrap;
         }
-      }
+    }
 
       .flex-item-right {
-        flex: 15%;
+        flex: 20%;
+        padding-top: 40px;
+        transition: 0.5s;
 
         p {
           font-weight: 500;
@@ -141,52 +149,38 @@
           text-align: center;
         }
       }
+  }
+  .dish-desc:hover {
+    .desc-flex-item {
+      flex: auto;
+    }
 
-      .dish-desc:hover {
-        .desc-flex-item {
-          flex: auto;
-        }
+    .flex-item-left {
+      flex: 85%;
+    }
 
-        .flex-item-left {
-          flex: 80%;
-          padding-bottom: 18px;
-        }
-        .flex-item-right {
-          flex: 20%;
-          padding-bottom: 18px;
-        }
+    .flex-item-right {
+      flex: 15%;
+      margin-right: 78px;
+    }
 
-        .icon-block {
-          display: inline-block;
-          animation: turn .5s;
-        }
+    .fa-check {
+      animation: turn .5s;
+    }
 
-        .check-button {
-          display: inline-block;
-          animation: slide .5s;
-          
-        }
-
-        @keyframes slide {
-          0% {
-            transform: translateX(100%);
-          }
-
-          100% {
-            transform: translateX(0%);
-          }
-        }
-
-        @keyframes turn {
-          0% {
-            transform: rotate(180deg);
-          }
-
-          100% {
-            transform: rotate(360deg);
-          }
-        }
+    .check-button {
+      right: 0px;
+    }
+  
+    @keyframes turn {
+      0% {
+        transform: rotate(90deg);
       }
+  
+      100% {
+        transform: rotate(360deg);
+      }
+    }
   }
 
   @keyframes slideIn-Y {
