modify heart icon position in menu pages

--- a/css/style.css
+++ b/css/style.css
@@ -487,6 +487,9 @@ hr {
   opacity: 0;
 }
 
+.dish-desc {
+  overflow: hidden;
+}
 .dish-desc .check-button {
   position: absolute;
   border: none;
