--- a/css/style.css
+++ b/css/style.css
@@ -320,8 +320,7 @@ header {
 
 .fill-heart-icon {
   --fa-display: none;
-  opacity: 0;
-  transition: all 0.5s ease-in-out;
+  color: transparent;
 }
 
 a:hover .empty-heart-icon {
@@ -331,12 +330,16 @@ a:hover .fill-heart-icon {
   --fa-display: inline-block;
 }
 
-.fill-heart-icon:hover {
-  background: linear-gradient(to top, #FF79DA, #9356DC);
-  opacity: 1;
+.heart-icon-block {
+  background: linear-gradient(to left, white 40%, #9356DC, #FF79DA) right;
+  background-size: 200%;
+  transition: all 0.5s ease-in-out;
   background-clip: text;
   -webkit-background-clip: text;
-  color: transparent;
+}
+
+.heart-icon-block:hover {
+  background-position: left;
 }
 
 footer {
@@ -487,9 +490,6 @@ hr {
   opacity: 0;
 }
 
-.dish-desc {
-  overflow: hidden;
-}
 .dish-desc .check-button {
   position: absolute;
   border: none;
